fix mobile overflow hidden

--- a/src/components/Skills/skills.scss
+++ b/src/components/Skills/skills.scss
@@ -8,7 +8,7 @@
 
     @media (max-width: $mobile_l) {
         height: auto;
-        overflow: auto;
+        overflow: hidden;
     }
 
     .skills-content {
